# weave

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.api  README.md  docker-compose.prod.yml  docker-compose.yml
.agents/skills/prepare-claude-ui-refresh/: SKILL.md
.claude/: launch.json
.github/workflows/: ci.yml
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  tour.ts
apps/web/app/(app)/: layout.tsx  page.tsx
apps/web/app/(app)/agent/: page.tsx
apps/web/app/(app)/competence/: page.tsx
apps/web/app/(app)/connecter-les-sources/: page.tsx
apps/web/app/(app)/espace-de-travail/: page.tsx
apps/web/app/(app)/gouvernance/: page.tsx
apps/web/app/(app)/interroger-la-memoire/: page.tsx
apps/web/app/(app)/reglages/: page.tsx
apps/web/app/(app)/vue-d-ensemble/: page.tsx
apps/web/app/agent/: page.tsx
apps/web/app/competence/: page.tsx
apps/web/app/connecter-les-sources/: page.tsx
apps/web/app/espace-de-travail/: page.tsx
apps/web/app/gouvernance/: page.tsx
apps/web/app/interroger-la-memoire/: page.tsx
apps/web/app/vue-d-ensemble/: page.tsx
apps/web/app/weave-api/[...path]/: route.ts
apps/web/components/: AgentsPanel.tsx  AskPanel.tsx  FeedPanel.tsx  MemoryPanel.tsx  ScopeBar.tsx  SkillsPanel.tsx  TopBar.tsx  dashboard-ui.tsx  providers.tsx
apps/web/components/agents/: agents-library.tsx
apps/web/components/chat/: chat-blocks.tsx  chat-composer.tsx  chat-orchestrator.ts  chat-shell.tsx  chat-thinking.tsx  chat-thread.tsx  slash-command-menu.tsx  types.ts  use-weave-chat.ts
apps/web/components/chat/onboarding/: onboarding-block.tsx  onboarding-context.tsx  onboarding-steps.ts  (+2 more)
apps/web/components/layout/: app-shell.tsx  page-transition.tsx  shell-header-context.tsx  use-shell-header.ts  weave-shell.tsx  weave-sidebar.tsx
apps/web/components/ui/: page-skeleton.tsx  primitives.tsx  workspace-ui.tsx
apps/web/components/workspace/: api-feed-row.tsx  workspace-dashboard.tsx
apps/web/hooks/: sim-progress.ts  use-live-connections.ts  use-viewport.ts  use-weave-dashboard.ts  use-weave-project.ts  weave-context.tsx
apps/web/lib/: api.ts  connectors.ts  e2e-env.ts  live-metrics.ts  scope.ts  types.ts
apps/web/lib/i18n/: context.tsx  translate.ts  types.ts
apps/web/scripts/: capture-demo-media.mjs  check-api-errors.mjs
apps/web/tests/e2e/: api.spec.ts  flow.spec.ts  hero.spec.ts  onboarding.spec.ts  pages.spec.ts  smoke.spec.ts
crates/weave-api/: Cargo.toml
crates/weave-api/src/: discord_oauth.rs  main.rs  notion_oauth.rs  oauth.rs
crates/weave-core/: Cargo.toml
crates/weave-core/src/: lib.rs
crates/weave-ingest/: Cargo.toml
crates/weave-ingest/src/: discord.rs  lib.rs  notion.rs  notion_write.rs  simulate.rs  slack.rs
crates/weave-llm/: Cargo.toml
crates/weave-llm/src/: claude.rs  clean.rs  embed.rs  embed_ollama.rs  heuristic.rs  lib.rs  ollama.rs  openai.rs
crates/weave-pipeline/: Cargo.toml
crates/weave-pipeline/src/: lib.rs
crates/weave-store/: Cargo.toml
crates/weave-store/src/: connections.rs  crypto.rs  lib.rs  ports.rs  postgres.rs
crates/weave-store/tests/: README.md  postgres_integration.rs
docs/: CLAUDE_UI_PREP_TODO.md  Cognitive_Runtime_Blueprint_MVP.txt  EVALUATOR_GUIDE.md  HARDENING_SPRINT.md  RESUME-connecteur-notion.md  RESUME-deploy-oauth.md  RESUME-slack-oauth.md  SESSION-SYNTHESIS-2026-07.md  SESSION_REPORT_2026-07-02.md  Weave_Audit_Demo_vs_Produit.md  Weave_Technical_Spec.md
docs/api/: README.md  openapi.yaml
docs/claude-design/: 01-company-blurb.md  02-other-notes.md  README.md  design-tokens.md
docs/claude-design/logo/: README.md  showcase.html
docs/claude-design/prompts/: 00-system-preamble.md  01-org-dashboard.md  02-live-workspace.md  03-skill-detail.md  04-agent-detail.md  05-ask-the-org.md  06-connect-sources.md  07-admin-governance.md  README.md
docs/demo/: page@bdc7221d1920dbb4936ccbb5f93005ba.webm  page@f86df9b10df32d4dc19611149008e744.webm
docs/superpowers/plans/: 2026-07-03-notion-connector.md  2026-07-03-slack-oauth.md  2026-07-04-emergence-tuning.md  2026-07-04-notion-write-back.md  2026-07-05-discord-connector.md  2026-07-05-discord-mention-responder.md  2026-07-05-topic-canonicalization.md
docs/superpowers/specs/: 2026-07-02-notion-reskin-guided-tour-design.md  2026-07-03-notion-connector-design.md  2026-07-03-slack-oauth-design.md  2026-07-04-emergence-tuning-design.md  2026-07-04-input-consolidation-design.md  2026-07-04-notion-write-back-design.md  2026-07-04-slack-user-channels-design.md  2026-07-04-structured-llm-io-design.md  2026-07-05-discord-connector-design.md  2026-07-05-discord-mention-responder-design.md  2026-07-05-emergence-freetext-canonicalization-design.md
migrations/: 0001_init.sql  0002_agents.sql  0003_embeddings_768.sql  0004_org_scoping.sql  0005_connections.sql  0006_emergence_tuning.sql  0007_fact_dedup.sql  0008_topic_canonicalization.sql  0009_answered_mentions.sql
scripts/: e2e-hero.sh  eval.sh
(+2 files in other folders)
