[workspace]
resolver = "2"
members = [
    "crates/weave-core",
    "crates/weave-store",
    "crates/weave-llm",
    "crates/weave-pipeline",
    "crates/weave-ingest",
    "crates/weave-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Flambard <g.flambard@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web / HTTP
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Storage
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
weave-core = { path = "crates/weave-core" }
weave-store = { path = "crates/weave-store" }
weave-llm = { path = "crates/weave-llm" }
weave-pipeline = { path = "crates/weave-pipeline" }
weave-ingest = { path = "crates/weave-ingest" }
