[package]
name = "weave-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "weave-api"
path = "src/main.rs"

[dependencies]
weave-core.workspace = true
weave-store.workspace = true
weave-llm.workspace = true
weave-pipeline.workspace = true
weave-ingest.workspace = true

axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy = "0.15"
reqwest.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
sqlx.workspace = true
async-trait.workspace = true
wiremock = "0.6"
