[package]
name = "weave-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weave-core.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
