[package]
name = "weave-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weave-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
