[package]
name = "weave-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weave-core.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
