[package]
name = "weave-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
weave-core.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
chacha20poly1305 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio.workspace = true
